--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -2,15 +2,12 @@
     <div class="container-fluid">
         <div class="row no-gutter">
                         <div class="col-lg-4 col-sm-6">
-                <a href="https://cincinnati-tree-canopy.uk.r.appspot.com/" class="portfolio-box" target="_blank">
+                <a href="" class="portfolio-box" target="_blank">
                     <img src="img/portfolio/8.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
-                            <div class="project-category text-faded">
-                                Completed (journal article in preparation)
-                            </div>
                             <div class="project-name">
-                                I co-developed Cincinnati's equity-based tree allocation plan.
+                                Intersectional Environmentalism
                             </div>
                         </div>
                     </div>
@@ -21,15 +18,12 @@
     <div class="container-fluid">
         <div class="row no-gutter">
                         <div class="col-lg-4 col-sm-6">
-                <a href="https://doi.org/10.21142/SS-0301-2022-e057" class="portfolio-box" target="_blank">
+                <a href="" class="portfolio-box" target="_blank">
                     <img src="img/portfolio/10.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                Completed (journal article)
-                            </div>
-                            <div class="project-name">
-                                I identified environmental conflicts associated with air pollution and the marginalization of Indigenous Peoples in Ecuador.
+                                Environmental Justice
                             </div>
                         </div>
                     </div>
@@ -37,105 +31,84 @@
             </div>
             
                         <div class="col-lg-4 col-sm-6">
-                <a href="https://drive.google.com/file/d/1pS3Jy0lyTDck19mkB497cfnsgWYkk_gz/view?usp=sharing" class="portfolio-box" target="_blank">
+                <a href="" class="portfolio-box" target="_blank">
                     <img src="img/portfolio/7.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                Completed (technical document)
-                            </div>
-                            <div class="project-name">
-                                I documented ecological outcomes associated with practices that support Bolivian farmers.
+                                Environmental Racism
                             </div>
                         </div>
                     </div>
                 </a>
             </div>
                         <div class="col-lg-4 col-sm-6">
-                <a href="https://doi.org/10.1002/fee.2288" class="portfolio-box" target="_blank">
+                <a href="" class="portfolio-box" target="_blank">
                     <img src="img/portfolio/6.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
-                            <div class="project-category text-faded">
-                                Completed (journal article)
-                            </div>
                             <div class="project-name">
-                                I explored global interconnections linked to the flow of ecological goods to urban areas.
+                                Climate Justice
                             </div>
                         </div>
                     </div>
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a href="https://doi.org/10.1016/j.jnc.2021.126110" class="portfolio-box" target="_blank">
+                <a href="" class="portfolio-box" target="_blank">
                     <img src="img/portfolio/9.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
-                            <div class="project-category text-faded">
-                                Completed (journal article)
-                            </div>
                             <div class="project-name">
-                                I assessed human perceptions to soundscapes in Tierra del Fuego, and determined applications in conservation education.
+                                Ecofeminism
                             </div>
                         </div>
                     </div>
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a href="https://doi.org/10.1016/j.landurbplan.2022.104516" class="portfolio-box" target="_blank">
+                <a href="" class="portfolio-box" target="_blank">
                     <img src="img/portfolio/1.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
-                            <div class="project-category text-faded">
-                                Completed (journal article)
-                            </div>
                             <div class="project-name">
-                                I determined the role of conservation land in ecosystem service inequity in Chicago.
+                                Environmental Colonialism
                             </div>
                         </div>
                     </div>
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a href="https://twitter.com/christiankscott/status/1287124585167630342?s=20" class="portfolio-box" target="_blank">
+                <a href="" class="portfolio-box" target="_blank">
                     <img src="img/portfolio/2.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
-                            <div class="project-category text-faded">
-                                Completed (journal article under revision)
-                            </div>
                             <div class="project-name">
-                                I identified unintended outcomes of urban agriculture as a social alleviation and environmental management strategy in Mexico City.
+                                Green Gentrification
                             </div>
                         </div>
                     </div>
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a href="https://iwrrc.org/factsheet-impacts-of-urban-ecosystem-services/" class="portfolio-box" target="_blank">
+                <a href="" class="portfolio-box" target="_blank">
                     <img src="img/portfolio/3.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
-                            <div class="project-category text-faded">
-                                Completed (extension factsheet)
-                            </div>
                             <div class="project-name">
-                                I engaged over 400 stewardship groups, and assessed stormwater and public health in the Midwest.
+                                Luxury Effect
                             </div>
                         </div>
                     </div>
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a href="https://www.researchgate.net/project/Scientific-and-social-efforts-to-address-environmental-problems-and-engage-the-local-community-A-case-study-in-the-community-of-Juana-de-Matos-Catano-PR" class="portfolio-box" target="_blank">
+                <a href="" class="portfolio-box" target="_blank">
                     <img src="img/portfolio/4.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
-                            <div class="project-category text-faded">
-                                Completed (journal article in preparation)
-                            </div>
                             <div class="project-name">
-                                I partnered with a Puerto Rican non-profit to document enviromental injustice in an urban community.
+                                Equitable Resilience
                             </div>
                         </div>
                     </div>
