--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -22,7 +22,7 @@
                     <img src="img/portfolio/10.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
-                            <div class="project-category text-faded">
+                            <div class="project-name">
                                 Environmental Justice
                             </div>
                         </div>
@@ -35,7 +35,7 @@
                     <img src="img/portfolio/7.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
-                            <div class="project-category text-faded">
+                            <div class="project-name">
                                 Environmental Racism
                             </div>
                         </div>
