--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -23,7 +23,7 @@
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-name">
-                                Environmental Justice
+                                Intersectionality
                             </div>
                         </div>
                     </div>
@@ -36,7 +36,7 @@
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-name">
-                                Environmental Racism
+                                Environmental Justice
                             </div>
                         </div>
                     </div>
@@ -48,7 +48,7 @@
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-name">
-                                Climate Justice
+                                Environmental Racism
                             </div>
                         </div>
                     </div>
@@ -60,7 +60,7 @@
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-name">
-                                Ecofeminism
+                                Environmental Colonialism
                             </div>
                         </div>
                     </div>
@@ -72,7 +72,7 @@
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-name">
-                                Environmental Colonialism
+                                Climate Justice
                             </div>
                         </div>
                     </div>
@@ -84,7 +84,7 @@
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-name">
-                                Green Gentrification
+                                Ecofeminism
                             </div>
                         </div>
                     </div>
@@ -93,6 +93,30 @@
             <div class="col-lg-4 col-sm-6">
                 <a href="" class="portfolio-box" target="_blank">
                     <img src="img/portfolio/3.jpg" class="img-responsive" alt="">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+                            <div class="project-name">
+                                Equitable Resilience
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+                <a href="" class="portfolio-box" target="_blank">
+                    <img src="img/portfolio/4.jpg" class="img-responsive" alt="">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+                            <div class="project-name">
+                                Green Gentrification
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+                <a href="" class="portfolio-box" target="_blank">
+                    <img src="img/portfolio/4.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-name">
@@ -108,7 +132,19 @@
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-name">
-                                Equitable Resilience
+                                Food Deserts
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+                <a href="" class="portfolio-box" target="_blank">
+                    <img src="img/portfolio/4.jpg" class="img-responsive" alt="">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+                            <div class="project-name">
+                                Supermarket Redlining
                             </div>
                         </div>
                     </div>
