--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -23,7 +23,7 @@
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-name">
-                                Intersectionality
+                                Environmental Justice
                             </div>
                         </div>
                     </div>
@@ -36,7 +36,7 @@
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-name">
-                                Environmental Justice
+                                Environmental Racism
                             </div>
                         </div>
                     </div>
@@ -48,7 +48,7 @@
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-name">
-                                Environmental Racism
+                                Environmental Colonialism
                             </div>
                         </div>
                     </div>
@@ -60,7 +60,7 @@
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-name">
-                                Environmental Colonialism
+                                Engineering for Human Rights
                             </div>
                         </div>
                     </div>
