--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -23,7 +23,7 @@
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-name">
-                                Environmental Justice
+                                Ecofeminism
                             </div>
                         </div>
                     </div>
@@ -36,7 +36,7 @@
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-name">
-                                Environmental Racism
+                                Environmental Justice
                             </div>
                         </div>
                     </div>
@@ -48,7 +48,7 @@
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-name">
-                                Environmental Colonialism
+                                Environmental Racism
                             </div>
                         </div>
                     </div>
@@ -84,7 +84,7 @@
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-name">
-                                Ecofeminism
+                                Energy Justice
                             </div>
                         </div>
                     </div>
@@ -108,7 +108,7 @@
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-name">
-                                Green Gentrification
+                                Redlining
                             </div>
                         </div>
                     </div>
@@ -132,7 +132,19 @@
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-name">
-                                Food Deserts
+                                Green Gentrification
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+                <a href="" class="portfolio-box" target="_blank">
+                    <img src="img/portfolio/4.jpg" class="img-responsive" alt="">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+                            <div class="project-name">
+                                Tree Equity
                             </div>
                         </div>
                     </div>
@@ -145,6 +157,66 @@
                         <div class="portfolio-box-caption-content">
                             <div class="project-name">
                                 Supermarket Redlining
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+                <a href="" class="portfolio-box" target="_blank">
+                    <img src="img/portfolio/4.jpg" class="img-responsive" alt="">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+                            <div class="project-name">
+                                Food deserts
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+                <a href="" class="portfolio-box" target="_blank">
+                    <img src="img/portfolio/4.jpg" class="img-responsive" alt="">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+                            <div class="project-name">
+                                Indigenous Science
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+                <a href="" class="portfolio-box" target="_blank">
+                    <img src="img/portfolio/4.jpg" class="img-responsive" alt="">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+                            <div class="project-name">
+                                Environmental Colonialism
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+                <a href="" class="portfolio-box" target="_blank">
+                    <img src="img/portfolio/4.jpg" class="img-responsive" alt="">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+                            <div class="project-name">
+                                Degrowth
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+                <a href="" class="portfolio-box" target="_blank">
+                    <img src="img/portfolio/4.jpg" class="img-responsive" alt="">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+                            <div class="project-name">
+                                Environmental Conflict
                             </div>
                         </div>
                     </div>
