--- a/_includes/call-to-action.html
+++ b/_includes/call-to-action.html
@@ -4,11 +4,10 @@
             <div class="col-lg-8 col-lg-offset-2 text-center">
                 <h2 class="section-heading">About the project</h2>
                 <hr class="light">
-                <p class="text-faded">The People and Planet project is a series of events and resources that provide empowerement and healing to people via natural spaces. The project is tailored with local input, paying close attention to the needs of those who have been forcefully silenced through history.</p>
-                <p class="text-faded">The People and Planet project is both a dedicated space to connect people with local experts who can provide support in issues that exarcebate social inequity as well as a place to empower people, especially women of color, by celebrating their resiliency and providing healing through nature.</p>
-                <p class="text-faded">Scroll through the website to learn about the planned 2023 program.</p>
+                <p class="text-faded">The people and planet project is a growing archive of story maps or digital stories that combine maps, text and multimedia to define key concepts relating to nature, people and justice.</p>
+                <p class="text-faded">This is an educational tool developed by environmental justice scholars for anyone and anybody who wants to learn about equity-conscious environmentalism.</p>
+                <p class="text-faded">Hover over the images below and click on key concepts of interest to navigate their corresponding story maps.</p>
                 <p class="text-faded"> </p>
-                <a href="https://uconn-my.sharepoint.com/:w:/g/personal/mayra_rodriguez_gonzalez_uconn_edu/ERUJ5vbTN55FmxjWP_7xpyEBjZlo0LxdKOtjL5bpj_641g?e=V29fFD" class="btn btn-default btn-xl wow tada" target="_blank">Vita</a>
             </div>
         </div>
     </div>
