--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,9 @@
 <header>
     <div class="header-content">
         <div class="header-content-inner">
-            <h1>Mayra I. Rodríguez González</h1>
+            <h1>People and Planet</h1>
             <hr>
-            <p><b><font size="+2">Born in the Greater Hartford area to connect Connecticut residents with nature for both empowerement and healing</font></b></p>
+            <p><b><font size="+2">Learn why justice matters</font></b></p>
             <a href="#about" class="btn btn-primary btn-xl page-scroll">Bio</a>
         </div>
     </div>
