--- a/_includes/call-to-action.html
+++ b/_includes/call-to-action.html
@@ -6,7 +6,7 @@
                 <hr class="light">
                 <p class="text-faded">The people and planet project is a growing archive of story maps or digital stories that combine maps, text and multimedia to define key concepts relating to nature, people and justice.</p>
                 <p class="text-faded">This is an educational tool developed by environmental justice scholars for anyone and anybody who wants to learn about equity-conscious environmentalism.</p>
-                <p class="text-faded">Hover over the images below and click on key concepts of interest to navigate their corresponding story maps.</p>
+                <p class="text-faded">Hover over the images below and click on key concepts to navigate to their corresponding story maps.</p>
                 <p class="text-faded"> </p>
             </div>
         </div>
