--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,8 +3,8 @@
         <div class="header-content-inner">
             <h1>People and Planet</h1>
             <hr>
-            <p><b><font size="+2">Learn why justice matters</font></b></p>
-            <a href="#about" class="btn btn-primary btn-xl page-scroll">Bio</a>
+            <p><b><font size="+4">Justice matters.</font></b></p>
+            <a href="#about" class="btn btn-primary btn-xl page-scroll">About</a>
         </div>
     </div>
 </header>
