--- a/_includes/call-to-action.html
+++ b/_includes/call-to-action.html
@@ -7,7 +7,7 @@
                 <p class="text-faded">The people and planet project is a growing archive of story maps or digital stories that combine maps, text and multimedia to define key concepts relating to nature, people and justice.</p>
                 <p class="text-faded">This is an educational tool developed by environmental justice scholars for anyone and anybody who wants to learn about equity-conscious environmentalism.</p>
                 <p class="text-faded">The project's name was inspired by Leah Thomas' "How to Dismantle Systems of Oppression to Protect People + Planet". We hope that as with Thomas' book, this archive can be used as a tool that "promotes awareness of the fundamental truth that we cannot save the planet without uplifting the voices of its people".</p>
-                <p class="text-faded">To use it, hover over the images below and click on key concepts to learn their definitions through story maps.</p>
+                <p class="text-faded">To use it, hover over the images below and click on key concepts to learn their definitions and history.</p>
                 <p class="text-faded"> </p>
             </div>
         </div>
