--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -18,13 +18,13 @@
                     <a class="page-scroll" href="#about">About</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#portfolio">Events & Resources</a>
+                    <a class="page-scroll" href="#portfolio">Key concepts</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#services">Partnerships</a>
+                    <a class="page-scroll" href="#services">Other info</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#contact">Contact</a>
+                    <a class="page-scroll" href="#contact">Requests</a>
                 </li>
             </ul>
         </div>
