--- a/_includes/services.html
+++ b/_includes/services.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2 class="section-heading">Partnerships</h2>
+                <h2 class="section-heading">Other info</h2>
                 <hr class="primary">
             </div>
         </div>
@@ -12,29 +12,29 @@
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-thumb-tack wow bounceIn text-primary"></i>
-                    <h3>Institutional affiliation</h3>
-                    <a href="https://cahnr.uconn.edu/extension/" class="text-muted" target="_blank">I am faculty at the University of Connecticut and part of the Cooperative Extension System.</a>
+                    <h3>Creater</h3>
+                    <a href="" class="text-muted" target="_blank">I am faculty at the University of Connecticut and part of the Cooperative Extension System.</a>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-graduation-cap wow bounceIn text-primary" data-wow-delay=".2s"></i>
-                    <h3>Student mentoring</h3>
-                    <a href="mailto:mayra.rodriguez_gonzalez@uconn.edu" class="text-muted" target="_blank">I mentor undergrad students through the University of Connecticut's Extension Internship program and the Harvard Forest summer program. Students interested in these opportunities can contact me via email.</a>
+                    <h3>Inspired by</h3>
+                    <a href="" class="text-muted" target="_blank">I mentor undergrad students through the University of Connecticut's Extension Internship program and the Harvard Forest summer program. Students interested in these opportunities can contact me via email.</a>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-users wow bounceIn text-primary" data-wow-delay=".1s"></i>
-                    <h3>Consulting</h3>
-                    <a href="https://site.uvm.edu/sal/" class="text-muted" target="_blank">I collaborate with the University of Vermont's Spatial Analysis Laboratory to advise city agencies aiming for an equitable and resilient future.</a>
+                    <h3>How to</h3>
+                    <a href="">I collaborate with the University of Vermont's Spatial Analysis Laboratory to advise city agencies aiming for an equitable and resilient future.</a>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary" data-wow-delay=".3s"></i>
-                    <h3>Recent</h3>
-                    <a href="https://epn.osu.edu/events/advancing-environmental-justice-extreme-heat-and-adapting-through-collaborative-networks" class="text-muted" target="_blank">Check out the recording of Ohio State University's "Environmental Justice & Heat in the City" event, where I recently spoke, by clicking here.</a>
+                    <h3>UConn Extension</h3>
+                    <a href="" class="text-muted" target="_blank">Check out the recording of Ohio State University's "Environmental Justice & Heat in the City" event, where I recently spoke, by clicking here.</a>
                 </div>
             </div>
         </div>
