--- a/_includes/services.html
+++ b/_includes/services.html
@@ -12,7 +12,7 @@
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-thumb-tack wow bounceIn text-primary"></i>
-                    <h3>Creater</h3>
+                    <h3>Creator</h3>
                     <a href="" class="text-muted" target="_blank">I am faculty at the University of Connecticut and part of the Cooperative Extension System.</a>
                 </div>
             </div>
