--- a/_includes/services.html
+++ b/_includes/services.html
@@ -13,28 +13,28 @@
                 <div class="service-box">
                     <i class="fa fa-4x fa-thumb-tack wow bounceIn text-primary"></i>
                     <h3>Creator</h3>
-                    <a href="" class="text-muted" target="_blank">I am faculty at the University of Connecticut and part of the Cooperative Extension System.</a>
+                    <a href="" class="text-muted" target="_blank">This project was created by Dr. Mayra Rodríguez, an educator in Urban and Community Forestry. Click here to learn about her other projects.</a>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-graduation-cap wow bounceIn text-primary" data-wow-delay=".2s"></i>
                     <h3>Inspired by</h3>
-                    <a href="" class="text-muted" target="_blank">I mentor undergrad students through the University of Connecticut's Extension Internship program and the Harvard Forest summer program. Students interested in these opportunities can contact me via email.</a>
+                    <a href="" class="text-muted" target="_blank">This project was inspired by Leah Thomas' work. Click here to learn all about it.</a>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-users wow bounceIn text-primary" data-wow-delay=".1s"></i>
                     <h3>How to</h3>
-                    <a href="">I collaborate with the University of Vermont's Spatial Analysis Laboratory to advise city agencies aiming for an equitable and resilient future.</a>
+                    <a href="">Story maps were created using Esri products. Click here to learn about the process.</a>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary" data-wow-delay=".3s"></i>
-                    <h3>UConn Extension</h3>
-                    <a href="" class="text-muted" target="_blank">Check out the recording of Ohio State University's "Environmental Justice & Heat in the City" event, where I recently spoke, by clicking here.</a>
+                    <h3>Extension News</h3>
+                    <a href="" class="text-muted" target="_blank">Dr. Rodríguez is faculty at UConn Extension, which translates science into action. Click here to keep up with news and projects.</a>
                 </div>
             </div>
         </div>
