--- a/_includes/services.html
+++ b/_includes/services.html
@@ -18,7 +18,7 @@
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
-                    <i class="fa fa-4x fa-graduation-cap wow bounceIn text-primary" data-wow-delay=".2s"></i>
+                    <i class="fa fa-4x fa-book wow bounceIn text-primary" data-wow-delay=".2s"></i>
                     <h3>Inspired by</h3>
                     <a href="" class="text-muted" target="_blank">This project was inspired by Leah Thomas' work. Click here to learn all about it.</a>
                 </div>
