--- a/_includes/services.html
+++ b/_includes/services.html
@@ -11,7 +11,7 @@
         <div class="row">
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
-                    <i class="fa fa-4x fa-thumb-tack wow bounceIn text-primary"></i>
+                    <i class="fa fa-4x fa-user wow bounceIn text-primary"></i>
                     <h3>Creator</h3>
                     <a href="" class="text-muted" target="_blank">This project was created by Dr. Mayra Rodríguez, an educator in Urban and Community Forestry. Click here to learn about her other projects.</a>
                 </div>
