--- a/_includes/services.html
+++ b/_includes/services.html
@@ -13,7 +13,7 @@
                 <div class="service-box">
                     <i class="fa fa-4x fa-user wow bounceIn text-primary"></i>
                     <h3>Creator</h3>
-                    <a href="" class="text-muted" target="_blank">This project was created by Dr. Mayra Rodríguez, an educator in Urban and Community Forestry. Click here to learn about her other projects.</a>
+                    <a href="" class="text-muted" target="_blank">This project was created by Dr. Mayra Rodríguez, an educator in Urban and Community Forestry at Uconn Extension. Click here to learn about her other projects.</a>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
@@ -34,7 +34,7 @@
                 <div class="service-box">
                     <i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary" data-wow-delay=".3s"></i>
                     <h3>Extension News</h3>
-                    <a href="" class="text-muted" target="_blank">Dr. Rodríguez is faculty at UConn Extension, which translates science into action. Click here to keep up with news and projects.</a>
+                    <a href="" class="text-muted" target="_blank">Click here to keep up with news and projects from UConn Extension, which is part of a nationwide network translating science into action.</a>
                 </div>
             </div>
         </div>
