--- a/_includes/services.html
+++ b/_includes/services.html
@@ -13,28 +13,28 @@
                 <div class="service-box">
                     <i class="fa fa-4x fa-user wow bounceIn text-primary"></i>
                     <h3>Creator</h3>
-                    <a href="" class="text-muted" target="_blank">This project was created by Dr. Mayra Rodríguez, an educator in Urban and Community Forestry at Uconn Extension. Click here to learn about her other projects.</a>
+                    <a href="" class="text-muted" target="_blank">This project was created by Dr. Mayra Rodríguez, an educator in Urban and Community Forestry at Uconn Extension.</a>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-book wow bounceIn text-primary" data-wow-delay=".2s"></i>
                     <h3>Inspired by</h3>
-                    <a href="" class="text-muted" target="_blank">This project was inspired by Leah Thomas' work. Click here to learn all about it.</a>
+                    <a href="" class="text-muted" target="_blank">Dr. Rodríguez was inspired by Leah Thomas' work. Click here to learn all about it.</a>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-map wow bounceIn text-primary" data-wow-delay=".1s"></i>
                     <h3>How to</h3>
-                    <a href="">Story maps were created using Esri products. Click here to learn about the process.</a>
+                    <a href="">All story maps were created using Esri products. Click here to learn how to create your own.</a>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary" data-wow-delay=".3s"></i>
                     <h3>Extension News</h3>
-                    <a href="" class="text-muted" target="_blank">Click here to keep up with news and projects from UConn Extension, which is part of a nationwide network translating science into action.</a>
+                    <a href="" class="text-muted" target="_blank">Click here to keep up with news on how UConn Extension translates science into action.</a>
                 </div>
             </div>
         </div>
