--- a/_includes/services.html
+++ b/_includes/services.html
@@ -25,7 +25,7 @@
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
-                    <i class="fa fa-4x fa-map wow bounceIn text-primary" data-wow-delay=".1s"></i>
+                    <i class="fa fa-4x fa-laptop wow bounceIn text-primary" data-wow-delay=".1s"></i>
                     <h3>How to</h3>
                     <a href="">Learn how to create story maps.</a>
                 </div>
