--- a/_includes/services.html
+++ b/_includes/services.html
@@ -13,14 +13,14 @@
                 <div class="service-box">
                     <i class="fa fa-4x fa-user wow bounceIn text-primary"></i>
                     <h3>Creator</h3>
-                    <a href="" class="text-muted" target="_blank">Dr. Mayra Rodríguez ia an educator in Urban and Community Forestry at Uconn Extension.</a>
+                    <a href="https://news.extension.uconn.edu/2023/01/26/qa-with-dr-mayra-rodriguez-urban-community-forestry-educator/" class="text-muted" target="_blank">Dr. Rodríguez ia an educator in Urban and Community Forestry at Uconn Extension.</a>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-book wow bounceIn text-primary" data-wow-delay=".2s"></i>
                     <h3>Inspired by</h3>
-                    <a href="" class="text-muted" target="_blank">Read more about Leah Thomas' "".</a>
+                    <a href="https://www.greengirlleah.com/" class="text-muted" target="_blank">Read more about Leah Thomas' "The Intersectional Environmentalist: How to Dismantle Systems of Oppression to Protect People + Planet".</a>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
@@ -34,7 +34,7 @@
                 <div class="service-box">
                     <i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary" data-wow-delay=".3s"></i>
                     <h3>Extension News</h3>
-                    <a href="" class="text-muted" target="_blank">Learn other ways in which science can be translated into action.</a>
+                    <a href="https://news.extension.uconn.edu/" class="text-muted" target="_blank">Learn other ways in which science can be translated into action.</a>
                 </div>
             </div>
         </div>
