--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 text-center">
-                <h2 class="section-heading">Got any requests? Help us expand our archive by suggesting other key concepts to define.</h2>
+                <h2 class="section-heading">Any requests? Suggest other key concepts to create story maps for.</h2>
                 <hr class="primary">
                 <p></p>
         </div>
