--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -2,16 +2,8 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 text-center">
-                <h2 class="section-heading">Any requests? Suggest other key concepts to create story maps for.</h2>
+                <h2 class="section-heading">Any requests? Suggest other key concepts to create story maps for. Click here to email.</h2>
                 <hr class="primary">
                 <p></p>
-        </div>
-        <div class="col-lg-2 col-lg-offset-1 text-center">
-            <a href="mailto:mayra.rodriguez_gonzalez@uconn.edu" target="_blank">
-            <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
-                <p>{{ site.email }}</p>
-            </a>
-        </div>
-
     </div>
 </section>
