--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -3,6 +3,7 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 text-center">
                 <h2 class="section-heading">Any requests? Suggest other key concepts to create story maps for. Click here to email.</h2>
+                <a href="mailto:mayra.rodriguez_gonzalez@uconn.edu">Any requests? Suggest other key concepts to create story maps for. Click here to email.</a>
                 <hr class="primary">
                 <p></p>
     </div>
