--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -2,7 +2,8 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 text-center">
-                <a href="mailto:mayra.rodriguez_gonzalez@uconn.edu" class="section-heading">Any requests? Suggest other key concepts to create story maps for. Click here to email the creator.</a>
+                <h2 class="section-heading">Any requests? Suggest other key concepts to create story maps for.</h2>
+                <a href="mailto:mayra.rodriguez_gonzalez@uconn.edu">Click here to email the creator.</a>
                 <hr class="primary">
                 <p></p>
     </div>
