--- a/_includes/services.html
+++ b/_includes/services.html
@@ -27,7 +27,7 @@
                 <div class="service-box">
                     <i class="fa fa-4x fa-question wow bounceIn text-primary" data-wow-delay=".1s"></i>
                     <h3>How to</h3>
-                    <a href="">Learn how to create story maps.</a>
+                    <a href="" class="text-muted" target="_blank">Learn how to create story maps.</a>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
