--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -8,7 +8,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand page-scroll" href="#page-top">The people and planet project</a>
+            <a class="navbar-brand page-scroll" href="#page-top">A story map archive</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
