--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -3,7 +3,7 @@
         <div class="row no-gutter">
                         <div class="col-lg-4 col-sm-6">
                 <a href="" class="portfolio-box" target="_blank">
-                    <img src="img/portfolio/8.jpg" class="img-responsive" alt="">
+                    <img src="img/portfolio/1.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-name">
@@ -19,7 +19,7 @@
         <div class="row no-gutter">
                         <div class="col-lg-4 col-sm-6">
                 <a href="" class="portfolio-box" target="_blank">
-                    <img src="img/portfolio/10.jpg" class="img-responsive" alt="">
+                    <img src="img/portfolio/2.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-name">
@@ -32,7 +32,7 @@
             
                         <div class="col-lg-4 col-sm-6">
                 <a href="" class="portfolio-box" target="_blank">
-                    <img src="img/portfolio/7.jpg" class="img-responsive" alt="">
+                    <img src="img/portfolio/3.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-name">
@@ -44,7 +44,7 @@
             </div>
                         <div class="col-lg-4 col-sm-6">
                 <a href="" class="portfolio-box" target="_blank">
-                    <img src="img/portfolio/6.jpg" class="img-responsive" alt="">
+                    <img src="img/portfolio/4.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-name">
@@ -56,7 +56,7 @@
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="" class="portfolio-box" target="_blank">
-                    <img src="img/portfolio/9.jpg" class="img-responsive" alt="">
+                    <img src="img/portfolio/5.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-name">
@@ -68,7 +68,7 @@
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="" class="portfolio-box" target="_blank">
-                    <img src="img/portfolio/1.jpg" class="img-responsive" alt="">
+                    <img src="img/portfolio/6.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-name">
@@ -80,7 +80,7 @@
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="" class="portfolio-box" target="_blank">
-                    <img src="img/portfolio/2.jpg" class="img-responsive" alt="">
+                    <img src="img/portfolio/7.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-name">
@@ -92,7 +92,7 @@
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="" class="portfolio-box" target="_blank">
-                    <img src="img/portfolio/3.jpg" class="img-responsive" alt="">
+                    <img src="img/portfolio/8.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-name">
@@ -104,7 +104,7 @@
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="" class="portfolio-box" target="_blank">
-                    <img src="img/portfolio/4.jpg" class="img-responsive" alt="">
+                    <img src="img/portfolio/9.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-name">
@@ -116,7 +116,7 @@
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="" class="portfolio-box" target="_blank">
-                    <img src="img/portfolio/4.jpg" class="img-responsive" alt="">
+                    <img src="img/portfolio/10.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-name">
@@ -128,7 +128,7 @@
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="" class="portfolio-box" target="_blank">
-                    <img src="img/portfolio/4.jpg" class="img-responsive" alt="">
+                    <img src="img/portfolio/11.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-name">
@@ -140,7 +140,7 @@
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="" class="portfolio-box" target="_blank">
-                    <img src="img/portfolio/4.jpg" class="img-responsive" alt="">
+                    <img src="img/portfolio/12.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-name">
@@ -152,7 +152,7 @@
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="" class="portfolio-box" target="_blank">
-                    <img src="img/portfolio/4.jpg" class="img-responsive" alt="">
+                    <img src="img/portfolio/13.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-name">
@@ -164,7 +164,7 @@
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="" class="portfolio-box" target="_blank">
-                    <img src="img/portfolio/4.jpg" class="img-responsive" alt="">
+                    <img src="img/portfolio/14.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-name">
@@ -176,7 +176,7 @@
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="" class="portfolio-box" target="_blank">
-                    <img src="img/portfolio/4.jpg" class="img-responsive" alt="">
+                    <img src="img/portfolio/15.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-name">
@@ -188,11 +188,11 @@
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="" class="portfolio-box" target="_blank">
-                    <img src="img/portfolio/4.jpg" class="img-responsive" alt="">
+                    <img src="img/portfolio/16.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-name">
-                                Environmental Colonialism
+                                Decolonial Environmentalism
                             </div>
                         </div>
                     </div>
@@ -200,7 +200,7 @@
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="" class="portfolio-box" target="_blank">
-                    <img src="img/portfolio/4.jpg" class="img-responsive" alt="">
+                    <img src="img/portfolio/17.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-name">
@@ -212,7 +212,7 @@
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="" class="portfolio-box" target="_blank">
-                    <img src="img/portfolio/4.jpg" class="img-responsive" alt="">
+                    <img src="img/portfolio/18.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-name">
