--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -168,7 +168,7 @@
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-name">
-                                Food deserts
+                                Food desert
                             </div>
                         </div>
                     </div>
