--- a/css/main.scss
+++ b/css/main.scss
@@ -34,7 +34,7 @@
 // }
 
 // variables.less
-$theme-primary: #bf93b4;
+$theme-primary: #eba7a7;
 $theme-dark: #222;
 
 // Import partials from `sass_dir` (defaults to `_sass`)
