--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -4,7 +4,7 @@
             <div class="col-lg-8 col-lg-offset-2 text-center">
                 <h2 class="section-heading">Any requests? Suggest key concepts to create new story maps.</h2>
                 <hr class="primary">
-                <p href="mailto:mayra.rodriguez_gonzalez@uconn.edu">Email the creator here.</p>
+                <p href="mailto:mayra.rodriguez_gonzalez@uconn.edu">Click here to email the creator.</p>
                 <p></p>
     </div>
 </section>
