--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -168,7 +168,7 @@
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-name">
-                                Food desert
+                                Food Justice
                             </div>
                         </div>
                     </div>
@@ -192,7 +192,7 @@
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-name">
-                                Indigenous Science
+                                Indigenous Environmentalism
                             </div>
                         </div>
                     </div>
