--- a/_includes/services.html
+++ b/_includes/services.html
@@ -20,7 +20,7 @@
                 <div class="service-box">
                     <i class="fa fa-4x fa-lightbulb-o wow bounceIn text-primary" data-wow-delay=".2s"></i>
                     <h3>Inspired by</h3>
-                    <a href="https://www.greengirlleah.com/" class="text-muted" target="_blank">This work was inspired by Leah Thomas' "The Intersectional Environmentalist: How to Dismantle Systems of Oppression to Protect People + Planet".</a>
+                    <a href="https://www.greengirlleah.com/" class="text-muted" target="_blank">The project's name was inspired by Leah Thomas' "The Intersectional Environmentalist: How to Dismantle Systems of Oppression to Protect People + Planet". We hope that as with Thomas' book, this archive can be used as a tool that "promotes awareness of the fundamental truth that we cannot save the planet without uplifting the voices of its people".</a>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
