--- a/_includes/services.html
+++ b/_includes/services.html
@@ -33,8 +33,8 @@
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary" data-wow-delay=".3s"></i>
-                    <h3>On the news</h3>
-                    <a href="https://news.extension.uconn.edu/" class="text-muted" target="_blank">Curious about projects like this one? Check out how other UConn educators translate science into action.</a>
+                    <h3>Nws</h3>
+                    <a href="https://news.extension.uconn.edu/" class="text-muted" target="_blank">Find out how other UConn educators translate science into action.</a>
                 </div>
             </div>
         </div>
