--- a/_includes/services.html
+++ b/_includes/services.html
@@ -34,7 +34,7 @@
                 <div class="service-box">
                     <i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary" data-wow-delay=".3s"></i>
                     <h3>Nws</h3>
-                    <a href="https://news.extension.uconn.edu/" class="text-muted" target="_blank">Find out how other UConn educators translate science into action.</a>
+                    <a href="https://news.extension.uconn.edu/" class="text-muted" target="_blank">Find out other ways in which UConn educators are translating science into action.</a>
                 </div>
             </div>
         </div>
