--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
         <div class="header-content-inner">
             <h1>People and Planet</h1>
             <hr>
-            <p><b><font size="+2">Environmental justice is social justice.</font></b></p>
+            <p><b><font size="+2">Environmental justice is social justice too.</font></b></p>
             <a href="#about" class="btn btn-primary btn-xl page-scroll">About</a>
         </div>
     </div>
