--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,9 +4,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Portfolio">
-    <meta name="author" content="The People and Planet Project">
+    <meta name="author" content="The people and planet archive">
 
-    <title>The People and Planet Project</title>
+    <title>The people and planet archive</title>
 
     <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
