--- a/_includes/services.html
+++ b/_includes/services.html
@@ -34,7 +34,7 @@
                 <div class="service-box">
                     <i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary" data-wow-delay=".3s"></i>
                     <h3>Other stories</h3>
-                    <a href="https://clear.uconn.edu/storymaps/" class="text-muted" target="_blank">Click here to check outher UConn stories about the environment.</a>
+                    <a href="https://clear.uconn.edu/storymaps/" class="text-muted" target="_blank">Click here to check out other UConn environmental stories.</a>
                 </div>
             </div>
         </div>
