--- a/_includes/services.html
+++ b/_includes/services.html
@@ -13,7 +13,7 @@
                 <div class="service-box">
                     <i class="fa fa-4x fa-lightbulb-o wow bounceIn text-primary" data-wow-delay=".2s"></i>
                     <h3>Inspired by</h3>
-                    <a href="https://news.extension.uconn.edu/2023/01/26/qa-with-dr-mayra-rodriguez-urban-community-forestry-educator/" class="text-muted" target="_blank">The archive's name was inspired by Leah Thomas' book "The Intersectional Environmentalist: How to Dismantle Systems of Oppression to Protect People + Planet".</a>
+                    <a href="" class="text-muted" target="_blank">The archive's name was inspired by Leah Thomas' book "The Intersectional Environmentalist: How to Dismantle Systems of Oppression to Protect People + Planet".</a>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
