--- a/_includes/services.html
+++ b/_includes/services.html
@@ -13,7 +13,7 @@
                 <div class="service-box">
                     <i class="fa fa-4x fa-lightbulb-o wow bounceIn text-primary" data-wow-delay=".2s"></i>
                     <h3>Inspired by</h3>
-                    <p class="text-muted" target="_blank"><font size="-1">The archive's name was inspired by Leah Thomas' "The Intersectional Environmentalist: How to Dismantle Systems of Oppression to Protect People + Planet".</p>
+                    <p class="text-muted" target="_blank"><font size="-1">This archive is named after Leah Thomas' "The Intersectional Environmentalist: How to Dismantle Systems of Oppression to Protect People + Planet".</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
