--- a/_includes/services.html
+++ b/_includes/services.html
@@ -13,28 +13,28 @@
                 <div class="service-box">
                     <i class="fa fa-4x fa-user wow bounceIn text-primary" data-wow-delay=".2s"></i>
                     <h3>Creator</h3>
-                    <a href="https://news.extension.uconn.edu/2023/01/26/qa-with-dr-mayra-rodriguez-urban-community-forestry-educator/" class="text-muted" target="_blank">This archive was created by Dr. Mayra Rodríguez for the Urban and Community Forestry at UConn Extension. The development of the archive was suppoted by the College of Agriculture, Health and Natural Resources' Strategic Vision Implementation Committee and UConn Hartford's Research on Resilient Cities, Racism and Equity.</a>
+                    <a href="https://news.extension.uconn.edu/2023/01/26/qa-with-dr-mayra-rodriguez-urban-community-forestry-educator/" class="text-muted" target="_blank">This archive is an initiative of the Urban and Community Forestry program at UConn Extension. It is suppored by the Strategic Vision Implementation Committee of the College of Agriculture, Health and Natural Resources and by the UConn Hartford's Research on Resilient Cities, Racism and Equity.</a>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary"></i>
                     <h3>Other stories</h3>
-                    <a href="https://clear.uconn.edu/storymaps/" class="text-muted" target="_blank">If you're interested in other digital storytelling, click here to check out the story maps by UConn's Center for Land use Education and Research.</a>
+                    <a href="https://clear.uconn.edu/storymaps/" class="text-muted" target="_blank">If you're interested in other digital storytelling, click here to explore the story maps by UConn's Center for Land use Education and Research.</a>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-question wow bounceIn text-primary" data-wow-delay=".1s"></i>
                     <h3>How to</h3>
-                    <a href="https://nrca.uconn.edu/eds/" class="text-muted" target="_blank">If you're a student or a teacher and would like to learn how to create digital stories, click here to check out the UConn Eco-Digital Storytelling course.</a>
+                    <a href="https://nrca.uconn.edu/eds/" class="text-muted" target="_blank">If you're a student or a teacher and would like to learn how to create digital stories, click here to learn about the UConn Eco-Digital Storytelling program.</a>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-lightbulb-o wow bounceIn text-primary" data-wow-delay=".3s"></i>
                     <h3>Inspired by</h3>
-                    <p class="text-muted" target="_blank"><font size="-1">The archive obtains its name from Leah Thomas' "The Intersectional Environmentalist: How to Dismantle Systems of Oppression to Protect People + Planet", and illustrations feature art by creators from Canva.com.</p>
+                    <p class="text-muted" target="_blank"><font size="-1">The archive is named after Leah Thomas' "The Intersectional Environmentalist: How to Dismantle Systems of Oppression to Protect People + Planet".</p>
                 </div>
             </div>
         </div>
