--- a/_includes/services.html
+++ b/_includes/services.html
@@ -12,8 +12,8 @@
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-users wow bounceIn text-primary" data-wow-delay=".2s"></i>
-                    <h3>Creator</h3>
-                    <a href="https://news.extension.uconn.edu/2023/01/26/qa-with-dr-mayra-rodriguez-urban-community-forestry-educator/" class="text-muted" target="_blank">This archive is an initiative of the Urban and Community Forestry program at UConn Extension. It is suppored by the Strategic Vision Implementation Committee of the College of Agriculture, Health and Natural Resources and by the UConn Hartford's Research on Resilient Cities, Racism and Equity.</a>
+                    <h3>Created by</h3>
+                    <a href="https://news.extension.uconn.edu/2023/01/26/qa-with-dr-mayra-rodriguez-urban-community-forestry-educator/" class="text-muted" target="_blank">This archive is an initiative of the Urban and Community Forestry program at UConn Extension, and was funded by UConn CAHNR's Strategic Vision Implementation Committee.</a>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
