--- a/_includes/services.html
+++ b/_includes/services.html
@@ -13,7 +13,7 @@
                 <div class="service-box">
                     <i class="fa fa-4x fa-users wow bounceIn text-primary" data-wow-delay=".2s"></i>
                     <h3>Created by</h3>
-                    <p class="text-muted" target="_blank"><font size="-1">This archive is an initiative of the Urban and Community Forestry program at UConn Extension, and was funded by UConn CAHNR's Strategic Vision Implementation Committee.</p>
+                    <p class="text-muted" target="_blank"><font size="-1">This archive is an initiative of the Urban and Community Forestry program at UConn Extension, and was supported by the Strategic Vision Implementation Committee of the University of Connecticut's (UConn) College of Agriculture, Health and Natural Resources, and UConn Hartford's Research on Resilient Cities, Racism and Equity.</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
